src/clusterfuzz/_internal/tests/core/crash_analysis/stack_parsing/stack_analyzer_data/golang_sigsegv_panic.txt
root@943ca8071e8b:/out# ./fuzzer-bzip2 
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x5da137]

goroutine 1 [running]:
math.glob..func1(0x5da117)
  /src/go/src/math/exp_asm.go:11 +0x7
math.init.ializers()
  /src/go/src/math/exp_asm.go:11 +0x3f
Aborted
